--- a/app/health/custom-health/custom-health.html
+++ b/app/health/custom-health/custom-health.html
@@ -4,8 +4,8 @@
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
                    ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true" class="md-fab md-mini md-primary">
-            <md-icon class="fa center-md-icon" ng-if="!showLegend" md-font-icon="fa-eye"></md-icon>
-            <md-icon class="fa center-md-icon" ng-if="showLegend" md-font-icon="fa-eye-slash"></md-icon>
+            <md-icon class="fa" ng-if="!showLegend" md-font-icon="fa-eye"></md-icon>
+            <md-icon class="fa" ng-if="showLegend" md-font-icon="fa-eye-slash"></md-icon>
         </md-button>
         <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
             <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
@@ -50,8 +50,8 @@
     <md-button flex md-theme="{{themePrimaryButtons}}" class="md-fab md-mini md-primary custom-health-hide-toolbar-button"
                ng-click="vm.showToolbar = !vm.showToolbar;"
                title="Hide Toolbar">
-        <md-icon class="fa center-md-icon" ng-if="!vm.showToolbar" md-font-icon="fa-chevron-down"></md-icon>
-        <md-icon class="fa center-md-icon" ng-if="vm.showToolbar" md-font-icon="fa-chevron-up"></md-icon>
+        <md-icon class="fa" ng-if="!vm.showToolbar" md-font-icon="fa-chevron-down"></md-icon>
+        <md-icon class="fa" ng-if="vm.showToolbar" md-font-icon="fa-chevron-up"></md-icon>
     </md-button>
     <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
 </div>
