--- a/app/health/health.html
+++ b/app/health/health.html
@@ -3,8 +3,8 @@
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
                    ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true" class="md-fab md-mini md-primary">
-            <md-icon class="fa center-md-icon" ng-if="!showLegend" md-font-icon="fa-eye"></md-icon>
-            <md-icon class="fa center-md-icon" ng-if="showLegend" md-font-icon="fa-eye-slash"></md-icon>
+            <md-icon class="fa" ng-if="!showLegend" md-font-icon="fa-eye"></md-icon>
+            <md-icon class="fa" ng-if="showLegend" md-font-icon="fa-eye-slash"></md-icon>
         </md-button>
         <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
             <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
