implemented very basic ordering and hiding/showing of dashboard widgets

--- a/app/health/receptor-health/receptor-health.html
+++ b/app/health/receptor-health/receptor-health.html
@@ -1,4 +1,4 @@
-<div flex style="min-width: 600px; min-height: 600px;" ng-controller="ReceptorHealthCtrl as vm">
+<div flex style="min-width: 600px; min-height: 600px" ng-controller="ReceptorHealthCtrl as vm">
     <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
