--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -39,8 +39,8 @@
                 <div md-virtual-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy:vm.draftsOrderBy.reverse)"
                     layout="row" ng-click="vm.setSelectedScheduleDraft(item)" ng-class="{'selected-schedule-row md-whiteframe-z3': item === vm.selectedScheduleDraft}"
                     class="schedule-draft-item" layout-align="start center" style="padding: 0 4px">
-                    <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary"
-                        md-mode="indeterminate" style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                    <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
+                        md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
                     </md-progress-linear>
                     <div layout="column" layout-align="start" style="padding-top: 4px; width: 125px">
                         <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
