minor layout tweaks for scheduler displays; fixed layout on observations overview

--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -7,8 +7,8 @@
                 layout-align="center center" title="{{vm.subarray.description}}" style="max-height: 76px; min-height: 76px; position: relative">
                 <div ng-include="'app/scheduler/templates/subarray-config-container.html'"></div>
                 <md-menu style="margin: 0; padding: 0;">
-                    <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdOpenMenu()" style="color: currentColor !important; font-size: inherit; position: relative">
-                        <span class="fa fa-chevron-down subarray-select-chevron" style="top: 6px"></span>
+                    <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdOpenMenu()" style="color: currentColor !important; font-size: 30px; position: relative">
+                        <span class="fa fa-chevron-down subarray-select-chevron" style="top: 12px"></span>
                         <span style="margin-left: 12px;">
                                     SUBARRAY {{vm.subarray.id}} -
                                     <span><b>{{vm.subarray.state}}</b></span>
