--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -1,69 +1,65 @@
-<div flex layout="column" style="min-width: 1015px; min-height: 860px;" ng-controller="SubArrayExecutorOverview as vm">
+<div flex layout="column" style="min-width: 1015px; min-height: 600px; margin: 0 8px 8px 8px" ng-controller="SubArrayExecutorOverview as vm">
+    <div flex ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2"
+        layout="row" flex style="min-height: 120px" md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
+        <div style="margin-left: 0; margin-top: 8px;" layout="column" flex>
 
-    <div flex layout="row">
-        <div flex layout="column" style="overflow: auto; padding: 0 8px">
-            <div ng-repeat="subarray in vm.subarrays | orderBy:'id'" class="subarray-container md-whiteframe-z2"
-                layout="row" flex style="min-width: 650px;" md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}">
-                <div style="margin-left: 0; margin-top: 8px;" layout="column" flex>
-
-                    <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1" layout="row"
-                        layout-align="center center" title="{{subarray.description}}" style="max-height: 64px; min-height: 64px; position: relative"
-                        ng-click="parent.vm.stateGo('scheduler.observations.detail', subarray.id)">
-                        <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
+            <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1" layout="row"
+                layout-align="center center" title="{{subarray.description}}" style="max-height: 48px; min-height: 48px; position: relative"
+                ng-click="parent.vm.stateGo('scheduler.observations.detail', subarray.id)">
+                <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
                             <span><b>{{subarray.state}}</b></span>
-                        <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
-                        </span>
-                        <span flex></span>
-                        <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 0; left: 0; right: 0; font-size: 12px">
-                            <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
-                            <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ? subarray.band : 'None'}}</b></span>
-                            <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b></span>
-                            <span ng-show="subarray.state === 'active' || subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ? subarray.config_label : 'None'}}</b></span>
-                        </div>
-                        <div class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()"
-                            style="cursor: default">
-                            <span style="width: 112px; padding-left: 12px" class="subheader-text">ID</span>
-                            <span flex>Description</span>
-                            <span style="width: 80px">State</span>
-                            <div style="width: 97px; font-size: 10px" layout="column">
-                                <span>Ready</span>
-                                <span>Verification State</span>
-                            </div>
-                            <div style="width: 94px; font-size: 10px" layout="column">
-                                <span>Type</span>
-                                <span>Desired Time</span>
-                            </div>
-                            <div style="min-width: 8px" ng-show="subarray && $root.elementHasScrollbar('#scheduleDataRepeat' + subarray.id, false)"></div>
-                        </div>
+                <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
+                </span>
+                <span flex></span>
+                <div layout="row" layout-align="center center" style="position: absolute; padding: 0; top: 0; left: 0; right: 0; font-size: 12px">
+                    <span title="Control Authority" style="margin-right: 8px;"><i>CA: </i><b>{{subarray.delegated_ca}}</b></span>
+                    <span title="Selected Band" style="margin-right: 8px;"><i>Band: </i><b>{{subarray.band ? subarray.band : 'None'}}</b></span>
+                    <span title="Selected Product" style="margin-right: 8px;"><i>Product: </i><b>{{subarray.product ? subarray.product : 'None'}}</b></span>
+                    <span ng-show="subarray.state === 'active' || subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{subarray.config_label ? subarray.config_label : 'None'}}</b></span>
+                </div>
+                <div class="unselectable list-subheader-title subheader-text avoid-clicks" layout="row" layout-align="start end"
+                    style="cursor: default">
+                    <span style="width: 128px; padding-left: 12px" class="subheader-text">ID</span>
+                    <span flex>Description</span>
+                    <span style="width: 80px">State</span>
+                    <div style="width: 97px; font-size: 10px" layout="column">
+                        <span>Ready</span>
+                        <span>Verification State</span>
+                    </div>
+                    <div style="width: 94px; font-size: 10px" layout="column">
+                        <span>Type</span>
+                        <span>Desired Time</span>
+                    </div>
+                    <div style="min-width: 8px" ng-show="subarray && $root.elementHasScrollbar('#scheduleDataRepeat' + subarray.id, false)"></div>
+                </div>
 
-                    </md-toolbar>
-                    <div flex id="{{'scheduleDataRepeat' + subarray.id}}" ng-class="{'maintenance-bg': subarray.maintenance}" style="max-height: 250px; min-height: 42px; overflow: auto">
-                        <div style="padding: 0 4px" ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id} track by item.id"
-                            class="schedule-draft-item" layout="column">
-                            <div flex layout="row" layout-align="start center">
-                                <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary progress-bar-fill" md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}"
-                                    value="{{item.progress}}" style="position: absolute; left: 0; right: 0;">
-                                </md-progress-linear>
-                                <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
-                                    md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
-                                </md-progress-linear>
-                                <span title="Priority: {{item.priority}}" style="min-width: 14px; font-size: 14px" class="fa" ng-class="{'fa-arrow-circle-up dark-blue-grey-color': item.priority === 'HIGH', 'fa-arrow-circle-down light-grey-color': item.priority === 'LOW'}"></span>
-                                <div layout="column" layout-align="start" style="width: 120px">
-                                    <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                        style="font-size: 14px; font-weight: bold" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
-                                    <span><i>{{item.owner}}</i></span>
-                                </div>
-                                <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
-                                <span style="width: 75px">{{item.state}}</span>
-                                <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
-                                    <span style="width: 75px" ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
-                                    <span style="width: 150px">{{item.verification_state}}</span>
-                                </div>
-                                <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
-                                    <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">{{item.type}}</span>
-                                    <span>{{item.desired_start_time}}</span>
-                                </div>
-                            </div>
+            </md-toolbar>
+            <div flex id="{{'scheduleDataRepeat' + subarray.id}}" ng-class="{'maintenance-bg': subarray.maintenance}"
+                style="overflow: auto">
+                <div style="padding: 0 4px" ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id} track by item.id"
+                    class="schedule-draft-item" layout="column">
+                    <div flex layout="row" layout-align="start center">
+                        <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary progress-bar-fill" md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}"
+                            value="{{item.progress}}" style="position: absolute; left: 0; right: 0;">
+                        </md-progress-linear>
+                        <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
+                            md-mode="indeterminate" style="position: absolute; left: 0; right: 0;">
+                        </md-progress-linear>
+                        <span title="Priority: {{item.priority}}" style="min-width: 14px; font-size: 14px" class="fa" ng-class="{'fa-arrow-circle-up dark-blue-grey-color': item.priority === 'HIGH', 'fa-arrow-circle-down light-grey-color': item.priority === 'LOW'}"></span>
+                        <div layout="column" layout-align="start" style="width: 120px">
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                style="font-size: 14px; font-weight: bold" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
+                            <span><i>{{item.owner}}</i></span>
+                        </div>
+                        <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
+                        <span style="width: 75px">{{item.state}}</span>
+                        <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
+                            <span style="width: 75px" ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
+                            <span style="width: 150px">{{item.verification_state}}</span>
+                        </div>
+                        <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin: 0 4px">
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">{{item.type}}</span>
+                            <span>{{item.desired_start_time}}</span>
                         </div>
                     </div>
                 </div>
