basic timeline view with daterange for the last hour and some dummy data

--- a/app/widgets/activity/activity-widget.html
+++ b/app/widgets/activity/activity-widget.html
@@ -1,4 +1,4 @@
-<div ng-controller="ActivityWidgetCtrl as vm" layout="column" class="md-whiteframe-z1" layout-align="start center"
-    md-theme="{{$root.themePrimary}}" style="margin: 16px">
-    activity stuff!
+<div ng-controller="ActivityWidgetCtrl as vm" layout="column" class="md-whiteframe-z1"
+    md-theme="{{$root.themePrimary}}" style="margin: 8px" flex>
+    <timeline flex></timeline>
 </div>
