--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <script src="app/d3/status-single-level-tree-map.js"></script>
 <script src="app/d3/subarray-health-map.js"></script>
 <script src="app/d3/navigation-pie.js"></script>
+<script src="app/d3/timeline.js"></script>
 
 <script src="app/app.js"></script>
 <script src="app/about/about.js"></script>
@@ -102,6 +103,7 @@
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
 <script src="app/widgets/apod/apod-widget.js"></script>
+<script src="app/widgets/activity/activity-widget.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
 <script src="app/scheduler/schedule-block-drafts/schedule-block-drafts.js"></script>
 <script src="app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.js"></script>
