first commit for activity display

--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -1,4 +1,4 @@
-<div ng-controller="ActivityWidgetCtrl as vm" layout="column" class="md-whiteframe-z1"
+<div ng-controller="ActivityCtrl as vm" layout="column" class="md-whiteframe-z1"
     md-theme="{{$root.themePrimary}}" style="margin: 32px" flex>
     <md-toolbar class="widget-toolbar md-whiteframe-z1" layout="row" layout-align="center center">
         <span>User Activity</span>
