--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <script src="app/cam-components/cam-components.js"></script>
 <script src="app/device-status/device-status.js"></script>
 <script src="app/instrumental-config/instrumental-config.js"></script>
+<script src="app/activity/activity.js"></script>
 <!-- Add New Component JS Above -->
 
 <!--dont use md-whiteframe class because it leaves black artifacts on sidenav-->
@@ -153,6 +154,9 @@
                         </div>
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
                             <md-button flex><span class="fa fa-heartbeat"></span><span>Custom Health</span></md-button>
+                        </div>
+                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('activity')">
+                            <md-button flex><span class="fa fa-dashboard"></span><span>System Activity</span></md-button>
                         </div>
                     </md-item-content>
                 </md-item>
