--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -1,10 +1,25 @@
-<div ng-controller="ActivityCtrl as vm" layout="column" class="md-whiteframe-z1"
-    md-theme="{{$root.themePrimary}}" style="margin: 8px" flex>
+<div ng-controller="ActivityCtrl as vm" layout="column" class="md-whiteframe-z1" md-theme="{{$root.themePrimary}}"
+    style="margin: 8px; position: relative" flex>
     <md-toolbar class="widget-toolbar md-whiteframe-z1" layout="row" layout-align="center center" style="padding: 0 8px">
         <span flex>User Activity</span>
-        <span ng-click="vm.addSensorTimeline()">Add</span>
     </md-toolbar>
-    <timeline flex load-options-function="vm.loadTimelineOptions" redraw-function="vm.redrawTimeline" update-function="vm.updateTimeline"  style="padding-top: 4px; height: 200px"></timeline>
-    <multi-line-chart flex ng-repeat="sensor in vm.sensorTimelines track by $index" data="vm.sensorData[sensor.name]" redraw-function="vm.redrawFunctions[sensor.name]" clear-function="vm.clearFunctions[sensor.name]"
-                      remove-sensor-function="vm.removeFunctions[sensor.name]" mouse-over-tooltip="true" download-csv="vm.downloadCSVDummy" hide-context-zoom="true"></multi-line-chart>
+    <div flex layout="column" style="overflow: auto">
+        <timeline style="min-height: 250px; max-height: 250px; min-width: 100%" load-options-function="vm.loadTimelineOptions"
+            redraw-function="vm.redrawTimeline" update-function="vm.updateTimeline" style="padding-top: 4px; height: 200px"></timeline>
+        <div ng-repeat="sensor in vm.sensorTimelines track by $index" layout="column" layout-align="start center"
+            style="position: relative; min-width: 100%; max-width: 100%; min-height: 230px; max-height: 230px">
+            <h4 style="margin: 8px">{{sensor.name}}</h4>
+            <span ng-click="vm.removeSensorTimeline(sensor)" md-ink-ripple class="icon-button fa fa-remove" style="position: absolute; right: 8px; top: 0"
+                title="Remove {{sensor.name}} timeline"></span>
+            <multi-line-chart style="margin-left: 20px; min-width: calc(100% - 20px); max-width: calc(100% - 20px); max-height: 200px; min-height: 200px"
+                data="vm.sensorData[sensor.name]" redraw-function="vm.redrawFunctions[sensor.name]" clear-function="vm.clearFunctions[sensor.name]"
+                load-options-function="vm.loadOptionsFunctions[sensor.name]" remove-sensor-function="vm.removeFunctions[sensor.name]"
+                mouse-over-tooltip="true" download-csv="vm.downloadCSVDummy" hide-context-zoom="true"></multi-line-chart>
+        </div>
+    </div>
+    <span class="fa fa-add" ></span>
+    <md-button style="postion: absolute; bottom: 0; left: 50%" md-theme="{{themePrimaryButtons}}" ng-click="vm.findSensorNames($event)"
+               ng-mouseenter="transparentButton = false" ng-mouseleave="transparentButton = true" class="hover-opacity md-fab md-mini md-primary">
+        <md-icon class="fa" md-font-icon="fa-plus"></md-icon>
+    </md-button>
 </div>
