--- a/app/activity/activity.html
+++ b/app/activity/activity.html
@@ -6,7 +6,7 @@
     <div flex layout="column" style="overflow: auto">
         <timeline style="min-height: 250px; max-height: 250px; min-width: 100%" load-options-function="vm.loadTimelineOptions"
             redraw-function="vm.redrawTimeline" update-function="vm.updateTimeline" style="padding-top: 4px; height: 200px"></timeline>
-        <div ng-repeat="sensor in vm.sensorTimelines track by $index" layout="column" layout-align="start center"
+        <div ng-repeat="sensor in vm.sensorTimelines" layout="column" layout-align="start center"
             style="position: relative; min-width: 100%; max-width: 100%; min-height: 230px; max-height: 230px">
             <h4 style="margin: 8px">{{sensor.name}}</h4>
             <span ng-click="vm.removeSensorTimeline(sensor)" md-ink-ripple class="icon-button fa fa-remove" style="position: absolute; right: 8px; top: 0"
